[package]
name = "inventory-rs"
version = "0.1.1"
edition = "2021"
description = "An inventory system independant of item data."
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/SoulShardStudios/inventory-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
