[package]
name = "game_inventory"
version = "1.0.2"
edition = "2021"
description = "An inventory system independant of item data."
license = "MIT"
readme = "crates_readme.md"
repository = "https://github.com/SoulShardStudios/game_inventory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
